--- a/projet/.gitignore
+++ b/projet/.gitignore
@@ -1,42 +1,35 @@
-../../.ICEauthority
-        ../../.Xauthority
-        ../../.bash_history
-        ../../.bash_logout
-        ../../.bashrc
-        ../../.bashrc.original
-        ../../.cache/
-        ../../.config/
-        ../../.cursor/
-        ../../.dmrc
-        ../../.dotnet/
-        ../../.face
-        ../../.face.icon
-        ../../.gitconfig
-        ../../.gitignore
-        ../../.java/
-        ../../.jo.md.swp
-        ../../.local/
-        ../../.mozilla/
-        ../../.pki/
-        ../../.profile
-        ../../.python_history
-        ../../.ssh/
-        ../../.sudo_as_admin_successful
-        ../../.vscode-oss/
-        ../../.vscode/
-        ../../.wget-hsts
-        ../../.xsession-errors
-        ../../.xsession-errors.old
-        ../../.zprofile
-        ../../.zsh_history
-        ../../.zshrc
-        ../../Desktop/
-        ../../Documents/Python apprentissage/
-        ../../Downloads/
-        ../../GitGithub/
-        ../../Pictures/
-        "../../T\303\251l\303\251chargements/"
-        ../../coursScript/
-        ../..gitignore.swp
+        ../.ICEauthority
+        ../.Xauthority
+        ../.bash_history
+        ../.bash_logout
+        ../.bashrc
+        ../.bashrc.original
+        ../.cache/
+        ../.config/
+        ../.cursor/
+        ../.dmrc
+        ../.dotnet/
+        ../.face
+        ../.face.icon
         ../.gitignore
-
+        ../.java/
+        ../.jo.md.swp
+        ../.local/
+        ../.mozilla/
+        ../.pki/
+        ../.profile
+        ../.python_history
+        ../.ssh/
+        ../.sudo_as_admin_successful
+        ../.vscode-oss/
+        ../.vscode/
+        ../.wget-hsts
+        ../.xsession-errors
+        ../.xsession-errors.old
+        ../.zprofile
+        ../.zsh_history
+        ../.zshrc
+        ../Desktop/
+        ../Documents/Python apprentissage/
+        ../Downloads/
+        ../Pictures/
